# tcn_slangpy_renderer

./: .gitignore  pyproject.toml
docs/plans/: 2026-03-02-surfel-rendering-design.md
examples/: capture_cube.py  view_depth_pointcloud.py
scripts/: validate_pipeline.sh
slangpy_renderer/: __init__.py  offscreen.py  window.py
slangpy_renderer/assets/shaders/: pointcloud_surfels.slang
slangpy_renderer/debug/: capture_analysis.py  renderdoc_api.py
slangpy_renderer/renderables/: pointcloud.py
slangpy_renderer/renderers/: pointcloud_surfel_renderer.py
slangpy_renderer/utils/: __init__.py  cuda_helpers.py
tests/: conftest.py  test_imports.py  test_offscreen_rendering.py  test_pipeline_validation.py
